--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       type="image/x-icon"
       href="https://cdn-icons-png.flaticon.com/512/3063/3063793.png"
     />
+    <link src="src/styles.css" type="style/text"></link>
   </head>
 
   <body>
